# kpm

./: .gitignore  CMakeLists.txt  README.md  kpm.h  kpm.yaml  kpm_logger.h  main.cpp  vcpkg.json
.github/workflows/: deploy.yml
install/: install.ps1  install.sh
src/: kpm_install.cpp  kpm_remove.cpp  logger.inl
test/: CMakeLists.txt  rprint.cpp  rprint.h  rprint_lib.cpp
